# PyConPL2025

./: LICENSE
Nie tylko websocket/: Nie tylko WebSocket.pptx
Nie tylko websocket/src/: Dockerfile  README.md  docker-compose.yaml  index.html  main.py  main_ext.py  main_simple.py  nginx.conf  pyproject.toml
Nowoczesna obsługa błędów w języku Python przy użyciu... torów/: README.md  Rail Oriented Programming.pptx  index.md
Nowoczesna obsługa błędów w języku Python przy użyciu... torów/src/: Dockerfile  README.md  docker-compose.yaml  helpers.ts  index.html  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  pyproject.toml  results.json
