[project]
name = ""
version = "1.0"
description = "Nowoczesna obsługa błędów w języku Python przy użyciu... torów"
authors = [
    {name = "Artur Lew", email = "artur.lew@gmail.com"},
]
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "returns>=0.26.0",
    "pyperf>=2.9.0"
]
requires-python = ">=3.12"

[tool.pdm.scripts]
dev = "python main.py"
